--- a/app/src/main/res/layout/character_detail_film_item.xml
+++ b/app/src/main/res/layout/character_detail_film_item.xml
@@ -13,6 +13,7 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:textStyle="bold"
+            android:textColor="@color/black"
             android:textSize="16sp"/>
 
     <TextView
@@ -22,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
+            android:textColor="@color/black"
             android:textSize="12sp"/>
 
     <TextView
