--- a/app/src/main/res/layout/character_search_fragment.xml
+++ b/app/src/main/res/layout/character_search_fragment.xml
@@ -25,5 +25,23 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintTop_toBottomOf="@+id/etSearchQuery"/>
 
+    <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tvLoadingPlaceHolder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/etSearchQuery"
+            android:text="@string/loading"
+            android:visibility="gone"/>
+
+    <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tvNothingPlaceHolder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/etSearchQuery"
+            android:text="@string/nothing_found"
+            android:visibility="gone"/>
+
 
 </android.support.constraint.ConstraintLayout>
