--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <dimen name="small_margin">4dp</dimen>
+
+    <dimen name="standard_text_size">12sp</dimen>
+    <dimen name="standard_margin">8dp</dimen>
+    <dimen name="standard_padding">8dp</dimen>
+
+    <dimen name="bigger_text_size">16sp</dimen>
+
+    <dimen name="planet_information_text_size">24sp</dimen>
+
+    <dimen name="biggest_text_size">32sp</dimen>
+    <dimen name="biggest_padding">16sp</dimen>
+    <integer name="maximum_film_opening_crawl_length">320</integer>
+
 </resources>
