--- a/app/src/main/res/layout/character_detail_fragment.xml
+++ b/app/src/main/res/layout/character_detail_fragment.xml
@@ -6,12 +6,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/standard_margin"
-        tools:context=".character.detail.view.CharacterDetailFragment">
+        tools:context=".ui.character.detail.view.CharacterDetailFragment">
     <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            tools:context=".character.detail.view.CharacterDetailFragment">
+            tools:context=".ui.character.detail.view.CharacterDetailFragment">
 
         <TextView
                 android:id="@+id/tvDetailCharacterName"
