Search edit text can have only one line.

--- a/app/src/main/res/layout/character_search_fragment.xml
+++ b/app/src/main/res/layout/character_search_fragment.xml
@@ -16,6 +16,7 @@
             android:gravity="top"
             android:layout_marginTop="@dimen/standard_margin"
             android:hint="@string/search_query_hint"
+            android:singleLine="true"
             app:layout_constraintTop_toTopOf="parent"/>
 
     <android.support.v7.widget.RecyclerView
